# cookiecutter-cpy

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .envrc  .gitignore  LICENSE  README.md  flake.nix  justfile  pyproject.toml
{{ cookiecutter.project_slug }}/.helix/: languages.toml
